syntax = "proto3";
package pb;

import "google/api/annotations.proto";
option go_package = "./;pb";
//import "validate/validate.proto";

//产品
service Web{

    //产品列表
    rpc ProductsList (ProductsListRequest) returns (ProductsListResponse) {
        option (google.api.http) = {
            get: "/web/products"
		};
    }

    //产品详情
    rpc ProductsDetail (ProductsIdRequest) returns (ProductsDetailResponse) {
        option (google.api.http) = {
            get: "/web/products/{id}"
		};
    }

    //产品创建
    rpc ProductsCreate(ProductsOneRequest) returns (ProductsResponse) {
        option (google.api.http) = {
            post: "/web/products"
            body: "*"
		};
    }

    //产品修改
    rpc ProductsMotify(ProductsOneRequest) returns (ProductsResponse) {
        option (google.api.http) = {
            put: "/web/products"
            body: "*"
		};
    }

    //产品删除
    rpc ProductsDelete(ProductsIdRequest) returns (ProductsResponse) {
        option (google.api.http) = {
            delete: "/web/products"
		};
    }
}

//产品通用
message ProductsResponse{
    int32 status = 1;
    string message = 2;
       //bool data = 3;
    int32 code = 4;
    string error = 5;
    bool details = 6;
}

//产品列表
message ProductsListRequest{
    //每页多少个
    int32 pageSize = 100;
    //页码
    int32 pageNumber = 101;
    //排序字段
    string orderKey =102;
    //排序方式
    string orderSort =103;
}

message ProductsListResponse{
    int32 status = 1;
    string message = 2;
    //ProductsList data = 3;
    int32 code = 4;
    string error = 5;
    ProductsList  details = 6;
}

message ProductsList {
    //总数
    int32 total = 1;
    //列表
    repeated ProductsOneRequest list = 2;
}

//产品结构
message ProductsOneRequest {
    //
    int32 id =1;
    //
    string createdAt =2;
    //
    string updatedAt =3;
    //
    string deletedAt =4;
    //
    string code =5;
    //
    int32 price =6;
    
}

//产品详情
message ProductsIdRequest{
    int32 id =1;
}

message ProductsDetailResponse{
    int32 status = 1;
    string message = 2;
    //ProductsOneRequest data = 3;
    int32 code = 4;
    string error = 5;
    ProductsOneRequest  details = 6;
}
